syntax = "proto3";

package model.v1;

message Offset {
  string id = 1;
  int64 height = 2;
  Timestamp timestamp = 3;
}

message Timestamp {
  int64 epochMs = 1;
  repeated string parts = 2;
}

message Event {
  Timestamp timestamp = 1;
  bytes payload = 2;
  bool undo = 3;
}

message StateTransition {
  Offset from = 1;
  Offset to = 2;
  Event event = 3;
}

message Stream {
  string id = 1;
  Offset start = 2;
  Offset end = 3;
  optional bytes user_data = 4;
}

message StreamStateRef {
  string stream_id = 1;
  Offset offset = 2;
}

message State {
  Offset from = 1;
  Offset to = 2;
  Event event = 3;
}